--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/stockmanager
+spring.datasource.username=stockmanager
+spring.datasource.password=stockmanager
 
+#spring.ai.openai.api-key=
