adding Security Configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+#spring.security.user.name=test
+#spring.security.user.password=test
+
+
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/stockmanager
 spring.datasource.username=stockmanager
