--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@
 #spring.security.user.password=test
 
 
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/stockmanager
 spring.datasource.username=stockmanager
 spring.datasource.password=stockmanager
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
 #spring.ai.openai.api-key=
