--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.username=stockmanager
 spring.datasource.password=stockmanager
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
 #spring.sql.init.mode=always
 #spring.jpa.defer-datasource-initialization=true
-#spring.ai.openai.api-key=
+spring.ai.openai.api-key=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
