--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.datasource.username=stockmanager
 spring.datasource.password=stockmanager
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
 #spring.sql.init.mode=always
 #spring.jpa.defer-datasource-initialization=true
-#spring.ai.openai.api-key=
+
+spring.ai.openai.api-key=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
