auto reading the query

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
-#spring.sql.init.mode=always
-#spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 spring.ai.openai.api-key=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
