--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
-spring.ai.openai.api-key=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
+spring.ai.openai.api-key=## place for OPENAI key##
